DMC-E系列控制卡例程/VB.net/例2_连续运动/例2_连续运动/LTDMC.vb


    Declare Function dmc_handwheel_set_axislist Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal AxisSelIndex As UInt16, ByVal AxisNum As UInt16, ByVal AxisList() As UInt16) As Int16
    Declare Function dmc_handwheel_get_axislist Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal AxisSelIndex As UInt16, ByRef AxisNum As UInt16, ByVal AxisList() As UInt16) As Int16
    Declare Function dmc_handwheel_set_ratiolist Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal AxisSelIndex As UInt16, ByVal StartRatioIndex As UInt16, ByVal RatioSelNum As UInt16, ByVal RatioList() As Double) As Int16
    Declare Function dmc_handwheel_get_ratiolist Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal AxisSelIndex As UInt16, ByVal StartRatioIndex As UInt16, ByVal RatioSelNum As UInt16, ByVal RatioList() As Double) As Int16
    Declare Function dmc_handwheel_set_mode Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal inmode As UInt16, ByVal IfHardEnable As UInt16) As Int16
    Declare Function dmc_handwheel_get_mode Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByRef inmode As UInt16, ByRef IfHardEnable As UInt16) As Int16
    Declare Function dmc_handwheel_set_index Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal AxisSelIndex As UInt16, ByVal RatioSelIndex As UInt16) As Int16
    Declare Function dmc_handwheel_get_index Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByRef AxisSelIndex As UInt16, ByRef RatioSelIndex As UInt16) As Int16
    'Declare Function dmc_handwheel_move Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal ForceMove As Integer) As Integer
    Declare Function dmc_handwheel_stop Lib "LTDMC.dll" (ByVal CardNo As UInt16) As Int16
    '编码器
    ' <summary>
    ' 设置编码器模式
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="mode">编码器计数模式：0-脉冲+方向，1-1倍AB相，2-1倍AB相,3-4倍AB相</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_set_counter_inmode Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal mode As UInt16) As Int16      '设定编码器的计数方式
    ' <summary>
    ' 读取编码器模式
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="mode">编码器计数模式：0-脉冲+方向，1-1倍AB相，2-1倍AB相,3-4倍AB相</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_get_counter_inmode Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByRef mode As UInt16) As Int16        '读取编码器的计数方式
    ' <summary>
    ' 读取编码器反馈值
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <returns>反馈值</returns>
    ' <remarks></remarks>
    Declare Function dmc_get_encoder Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16) As Int32
    ' <summary>
    ' 设置编码器位置值
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="encoder_value">位置值</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_set_encoder Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal encoder_value As Int32) As Int16
    ' <summary>
    ' 设置EZ信号模式
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="ez_logic">有效电平：0-低电平，1-高电平</param>
    ' <param name="ez_mode">保留：0</param>
    ' <param name="Filter">保留：0</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_set_ez_mode Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal ez_logic As UInt16, ByVal ez_mode As UInt16, ByVal Filter As Double) As Int16       '设置EZ信号
    ' <summary>
    ' 读取EZ信号模式
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="ez_logic">有效电平：0-低电平，1-高电平</param>
    ' <param name="ez_mode">保留：0</param>
    ' <param name="Filter">保留：0</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_get_ez_mode Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByRef ez_logic As UInt16, ByRef ez_mode As UInt16, ByRef Filter As Double) As Int16     '读取设置EZ信号

    Declare Function dmc_set_auxiliary_encoder_mode Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal channel As UInt16, ByVal inmode As UInt16, ByVal multi As UInt16) As Int16
    Declare Function dmc_get_auxiliary_encoder_mode Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal channel As UInt16, ByRef inmode As UInt16, ByRef multi As UInt16) As Int16
    Declare Function dmc_set_auxiliary_encoder Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal channel As UInt16, ByVal pos As UInt16) As Int16
    Declare Function dmc_get_auxiliary_encoder Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal channel As UInt16, ByRef inmode As UInt16) As Int16
    '锁存
    ' <summary>
    ' 设置锁存信号模式
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="ltc_logic">LTC 信号的触发方式，0：下降沿锁存，1：上升沿锁存</param>
    ' <param name="ltc_mode">保留：0</param>
    ' <param name="Filter">保留：0</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_set_ltc_mode Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal ltc_logic As UInt16, ByVal ltc_mode As UInt16, ByVal Filter As Double) As Int16    '设置LTC信号
    ' <summary>
    ' 读取锁存信号模式
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="ltc_logic">LTC 信号的触发方式，0：下降沿锁存，1：上升沿锁存</param>
    ' <param name="ltc_mode">保留：0</param>
    ' <param name="Filter">保留：0</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_get_ltc_mode Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByRef ltc_logic As UInt16, ByRef ltc_mode As UInt16, ByRef Filter As Double) As Int16  '读取设置LTC信号
    ' <summary>
    ' 设置锁存模式
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="all_enable">锁存模式：0-单轴单次锁存，1-所有轴同时单次锁存，2-单轴连续锁存，3-外部触发延时急停</param>
    ' <param name="latch_source">锁存源：0-指令位置，1-反馈位置</param>
    ' <param name="latch_channel">保留：0</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_set_latch_mode Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal all_enable As UInt16, ByVal latch_source As UInt16, ByVal latch_channel As UInt16) As Int16     '设置锁存方式
    ' <summary>
    ' 读取锁存模式
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="all_enable">锁存模式：0-单轴单次锁存，1-所有轴同时单次锁存，2-单轴连续锁存，3-外部触发延时急停</param>
    ' <param name="latch_source">锁存源：0-指令位置，1-反馈位置</param>
    ' <param name="latch_channel">保留：0</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_get_latch_mode Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByRef all_enable As UInt16, ByRef latch_source As UInt16, ByRef latch_channel As UInt16) As Int16
    ' <summary>
    ' 读取锁存值
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <returns>所存值</returns>
    ' <remarks></remarks>
    Declare Function dmc_get_latch_value Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16) As Int32           '读取控制卡内锁存值，再连续锁存模式下读取一次控制卡内有效锁存个数将会自动减1,并将锁存值保存在PC缓冲区内
    Declare Function dmc_get_latch_value_unit Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByRef pos_by_mm As Double) As Int16           '读取控制卡内锁存值，再连续锁存模式下读取一次控制卡内有效锁存个数将会自动减1,并将锁存值保存在PC缓冲区内

    ' <summary>
    ' 读取锁存次数
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <returns>锁存次数</returns>
    ' <remarks></remarks>
    Declare Function dmc_get_latch_flag Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16) As Int16             '读取控制卡内有效锁存个数
    ' <summary>
    ' 复位锁存次数
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_reset_latch_flag Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16) As Int16       '复位标志
    ' <summary>
    ' 按索引号读取连续锁存值
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="index">索引号</param>
    ' <returns>所存值</returns>
    ' <remarks></remarks>
    Declare Function dmc_get_latch_value_extern Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal index As UInt16) As Int32  '按索引号读取PC缓冲区中已保存的锁存值，读的时候会将控制卡内的有效锁存值全部保存在PC缓冲区中
    ' <summary>
    ' 读取连续锁存次数
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <returns>锁存次数</returns>
    ' <remarks></remarks>
    Declare Function dmc_get_latch_flag_extern Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16) As Int16            '读取PC缓冲区中已保存的已锁存值个数
    'DMC3410 5800专用 LTC端口触发延时急停时间 单位us
    ' <summary>
    ' 设置外部触发延时急停时间
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="time">延时急停时间，单位us</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_set_latch_stop_time Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal time As Int32) As Int16
    ' <summary>
    ' 读取外部触发延时急停时间
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="time">延时急停时间，单位us</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_get_latch_stop_time Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByRef time As Int32) As Int16
    'DMC3800 5800专用 LTC反相输出
    ' <summary>
    ' 设置LTC锁存反相输出模式
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="enable">使能：0-禁止，1-允许</param>
    ' <param name="bitno">反相输出口：0-15</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_SetLtcOutMode Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal enable As UInt16, ByVal bitno As UInt16) As Int16
    ' <summary>
    ' 读取LTC锁存反相输出模式
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="enable">使能：0-禁止，1-允许</param>
    ' <param name="bitno">反相输出口：0-15</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_GetLtcOutMode Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByRef enable As UInt16, ByRef bitno As UInt16) As Int16
